# candle-flash-attn-v3

./: .gitignore  Cargo.toml  README.md  build.rs
hkernel/: flash.h  flash_api.cpp  flash_api.cu  kernel_traits.h
src/: ffi.rs  lib.rs
tests/: flash_attn_tests.rs
