[package]
name = "candle-flash-attn-v3"
version = "0.0.1"
edition = "2021"

description = "Flash attention V3 layer for the candle ML framework."
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "TBD"
readme = "README.md"
authors = ["Michael Feil"]

[dependencies]
candle = { version = "*", package = "candle-core", features = ["cuda"]}
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
num_cpus = "1.15.0"
rayon = "1.7.0"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
candle-nn = { version = "0.8.1", features = ["cuda"] }
rstest = "0.23"